--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,16 @@ install:
   - pip install coveralls
   - pip install coverage
   - pip install flask
+ 
+ before_script:
+  - psql -c "CREATE ROLE shoplist PASSWORD 'shoplist' CREATEDB CREATEROLE INHERIT LOGIN;" -U postgres
+  - psql -c "create database shoplist;" -U postgres
+  - python run.py db init
+  - python run.py db migrate
+  - python run.py db upgrade
   
 script:
-  - nosetests --with-coverage --cover-package=app
+  - nosetests --with-coverage test_app.py
 
 after_success:
   - coveralls
