--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
 language: python
 python:
   - "3.6.1"
-cache: pip
 install:
   - pip install -r requirements.txt
   - pip install coveralls
   - pip install coverage
   - pip install flask
+  
+ services:
+  - postgresql
  
  before_script:
-  - psql -c "CREATE ROLE shoplist PASSWORD 'shoplist' CREATEDB CREATEROLE INHERIT LOGIN;" -U postgres
-  - psql -c "create database shoplist;" -U postgres
+
   - python run.py db init
   - python run.py db migrate
   - python run.py db upgrade
