--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+
 python:
   - "3.6.1"
 cache: pip
@@ -12,7 +13,7 @@ services:
   -postgresql
  
  before_script:
-  - psql -c "create database shoplist;" -U postgres
+  - psql -c "create database shopping_list;" -U postgres
   - python run.py db init
   - python run.py db migrate
   - python run.py db upgrade
