--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
 Flask-Testing==0.6.2
 freeze==1.0.10
-idna==2.6 pi
+idna==2.6
 isort==4.2.15
 itsdangerous==0.24
 Jinja2==2.9.6
