--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,11 @@ services:
   - postgresql
 
 before_script:
+  - psql -c "CREATE ROLE shoplist PASSWORD 'shoplist' CREATEDB CREATEROLE INHERIT LOGIN;" -U postgres
   - psql -c "create database shoplist;" -U postgres
+  - python run.py db init
+  - python run.py db migrate
+  - python run.py db upgrade
 
 # command to run tests
 script:
