--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ services:
   - postgresql
 
 before_script:
-  - psql -c "CREATE ROLE shoplist PASSWORD 'shoplist' CREATEDB CREATEROLE INHERIT LOGIN;" -U postgres
-  - psql -c "create database shoplist;" -U postgres
+  - psql -c "CREATE ROLE postgres PASSWORD '' CREATEDB CREATEROLE INHERIT LOGIN;" -U postgres
+  - psql -c "create database tests;" -U postgres
   - python run.py db init
   - python run.py db migrate
   - python run.py db upgrade
@@ -18,6 +18,7 @@ before_script:
 # command to run tests
 script:
   - nosetests --with-coverage test_app.py
+  nosetests --with-coverage test_app.py
 
 after_success:
   - coveralls
