--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,13 @@ alembic==0.9.5
 asciinema==1.4.0
 asn1crypto==0.23.0
 astroid==1.5.3
+certifi==2017.11.5
 cffi==1.11.2
+chardet==3.0.4
 click==6.7
 colorama==0.3.9
 coverage==4.4.1
+coveralls==1.2.0
 cryptography==2.1.1
 docopt==0.6.2
 dominate==2.3.1
@@ -34,9 +37,11 @@ pytest==3.2.1
 python-dateutil==2.6.1
 python-editor==1.0.3
 rednose==1.2.2
+requests==2.18.4
 six==1.10.0
 SQLAlchemy==1.1.13
 termstyle==0.1.11
+urllib3==1.22
 virtualenv==15.1.0
 visitor==0.1.3
 Werkzeug==0.12.2
