--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,6 @@ script:
 
 after_success:
   - coveralls
+
+env:
+  - DB='tests' USER='postgres' PASSWORD='1234' HOST='localhost' PORT=5432 SECRET_KEY='this-is-my--secret--key'
