--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ after_success:
   - coveralls
 
 env:
-  - DB='tests' USER='postgres' PASSWORD='1234' HOST='localhost' PORT=5432 SECRET_KEY='this-is-my--secret--key'
+  - db='tests' USER='postgres' PASSWORD='1234' HOST='localhost' PORT=5432 SECRET_KEY='this-is-my--secret--key'
