modify travis to cater for all the test cases in all the files

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
 
 # command to run tests
 script:
-  - nosetests --with-coverage test_app.py
+  - nosetests --with-coverage app/tests/
 
 after_success:
   - coveralls
